--- a/site/index.html
+++ b/site/index.html
@@ -29,10 +29,10 @@
 	</section>
 	<section>
 		<ul>
-			<li><img src="flaps.gif"><p><h3>He Flaps!</h3></p></li>
-			<li><img src="flies.jpg"><p><h3>He Flies!</h3></p></li>
-			<li><img src="bird.png"><p><h3>He's a Bird!</h3></p></li>
-			<li><img src="flappybird.jpg"><p><h3>He's FlappyBird!</h3></p></li>
+			<li><img src="img/flaps.gif"><p><h3>He Flaps!</h3></p></li>
+			<li><img src="img/flies.jpg"><p><h3>He Flies!</h3></p></li>
+			<li><img src="img/bird.png"><p><h3>He's a Bird!</h3></p></li>
+			<li><img src="img/flappybird.jpg"><p><h3>He's FlappyBird!</h3></p></li>
 		</ul>
 	</section>
 	<section>
