styled site for mobile screen size as base

--- a/site/index.html
+++ b/site/index.html
@@ -11,28 +11,26 @@
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" />
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <link href='https://fonts.googleapis.com/css?family=Ruda:400,700,900' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
 <body>
 	<nav>
-		<ul>
+		<ul class="nav-top">
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Directions</a></li>
 			<li><a href="#">Contact</a></li>
 		</ul>
 	</nav>
-	<header>
+	<header class="header">
 		<h1>Look in the sky!</h1>
 	</header>
 	<section>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit tempora ratione ea sit iste alias id, nulla vel sint recusandae amet voluptas consequuntur, vitae dolorum, fugit ad ipsum. Neque, labore?</p>
-	</section>
-	<section>
 		<ul>
-			<li><img src="img/flaps.gif"><p><h3>He Flaps!</h3></p></li>
-			<li><img src="img/flies.jpg"><p><h3>He Flies!</h3></p></li>
-			<li><img src="img/bird.png"><p><h3>He's a Bird!</h3></p></li>
-			<li><img src="img/flappybird.jpg"><p><h3>He's FlappyBird!</h3></p></li>
+			<li><img src="img/flaps.gif" width="150"><h2>He Flaps...  He Flies!</h2></li>
+			
+			<li><h2>He is ...</h2><img src="img/flappybird.jpg" class="logo"></li>
 		</ul>
 	</section>
 	<section>
@@ -40,16 +38,20 @@
 			Play Now
 		</button>
 	</section>
+	<section class="desc">
+		<p>A remake of the the very addictive game called FlappyBird. Tap your screen or press the space bar rapidly to keep FlappyBird flying between the pipes.<br><br>Don't touch the pipes or it's game over!<br><br>Press "Play Now" to start flying!</p>
+	</section>
+	
 	<footer>
 		<div>
-			<ul>
-				<li>Google+, Facebook buttons</li>
-				<li>Other Info, Copyright, Terms</li>
-			</ul>	
+			<ul class="social">
+				<li><a href="http://github.com/shawnstallings" target="blank"><i class="fa fa-github fa-2x"></i></a></li>
+				<li><a href="https://plus.google.com/u/0/100074317883498226173/posts" target="blank"><i class="fa fa-google-plus fa-2x"></i></a></li>
+				<li><a href="https://www.linkedin.com/pub/shawn-stallings/ba/73/9b7"><i class="fa fa-linkedin fa-2x"></i></a></li>
+			</ul>
+			<p class="copy">Copyright 2015</p>	
 		</div>
 	</footer>
-
-
 
 </body>
 </html>
