code with responsive breakpoints

--- a/site/index.html
+++ b/site/index.html
@@ -28,9 +28,13 @@
 	</header>
 	<section>
 		<ul>
-			<li><img src="img/flaps.gif" width="150"><h2>He Flaps...  He Flies!</h2></li>
-			
-			<li><h2>He is ...</h2><img src="img/flappybird.jpg" class="logo"></li>
+			<li>
+				<img src="img/flaps.gif" width="125">
+				<h2>He flaps...  he flies... he is...</h2>
+			</li>
+			<li>
+				<img src="img/flappybird.jpg" class="logo">
+			</li>
 		</ul>
 	</section>
 	<section>
@@ -39,7 +43,7 @@
 		</button>
 	</section>
 	<section class="desc">
-		<p>A remake of the the very addictive game called FlappyBird. Tap your screen or press the space bar rapidly to keep FlappyBird flying between the pipes.<br><br>Don't touch the pipes or it's game over!<br><br>Press "Play Now" to start flying!</p>
+		<p>A remake of the the very addictive game FlappyBird. Tap your screen or press the space bar rapidly to keep FlappyBird flying between the pipes. Don't touch the pipes or it's game over!<br></p>
 	</section>
 	
 	<footer>
@@ -49,7 +53,7 @@
 				<li><a href="https://plus.google.com/u/0/100074317883498226173/posts" target="blank"><i class="fa fa-google-plus fa-2x"></i></a></li>
 				<li><a href="https://www.linkedin.com/pub/shawn-stallings/ba/73/9b7"><i class="fa fa-linkedin fa-2x"></i></a></li>
 			</ul>
-			<p class="copy">Copyright 2015</p>	
+			<p class="copy">Created by Shawn Stallings, Copyright 2015</p>	
 		</div>
 	</footer>
 
