tested critical path(not working) reverted back with gulpfile changes

--- a/site/index.html
+++ b/site/index.html
@@ -6,14 +6,12 @@
         <title>Flappy Bird Clone Landing Page</title>
         <meta name="description" content="This is a FlappyBird clone site.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="shortcut icon" href="/favicon.ico">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" />
-        <link rel="stylesheet" href="css/styles.css">
         <link href='https://fonts.googleapis.com/css?family=Ruda:400,700,900' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     </head>
 <body>
 	<nav>
@@ -56,6 +54,7 @@
 			<p class="copy">Created by Shawn Stallings, Copyright 2015</p>	
 		</div>
 	</footer>
-
+	
+	
 </body>
 </html>
